Created board to display the instruction of the game. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,6 +38,12 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard
+OpenAssetsAtExit=/Game/Tyler_Blueprints/ResetbuttonTyler_Blueprint1.ResetbuttonTyler_Blueprint1
+OpenAssetsAtExit=/Game/Tyler_Blueprints/resetLevelButton.resetLevelButton
+OpenAssetsAtExit=/Game/Tyler_Blueprints/scoreboard_tyler_Blueprint.scoreboard_tyler_Blueprint
+OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
+OpenAssetsAtExit=/Game/Tyler_Blueprints/instructionBoardTyler_Blueprint.instructionBoardTyler_Blueprint
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1184,6 +1190,75 @@ resetLevelButton_C.Collision=True
 resetLevelButton_C.Lighting=True
 resetLevelButton_C.Tags=True
 resetLevelButton_C.Cooking=True
+ResetbuttonTyler_Blueprint1_C.Tick=True
+ResetbuttonTyler_Blueprint1_C.Replication=True
+resetLevelButton_C.Default=True
+scoreboard_tyler_Blueprint_C.Tick=True
+scoreboard_tyler_Blueprint_C.Actor=True
+scoreboard_tyler_Blueprint_C.Rendering=True
+scoreboard_tyler_Blueprint_C.Replication=True
+scoreboard_tyler_Blueprint_C.Input=True
+instructionBoardTyler_Blueprint_C.Tick=True
+instructionBoardTyler_Blueprint_C.Actor=True
+instructionBoardTyler_Blueprint_C.Rendering=True
+instructionBoardTyler_Blueprint_C.Replication=True
+instructionBoardTyler_Blueprint_C.Input=True
+instructionBoardTyler_Blueprint_C.Variable=True
+instructionBoardTyler_Blueprint_C.TransformCommon=True
+instructionBoardTyler_Blueprint_C.Sockets=True
+instructionBoardTyler_Blueprint_C.StaticMesh=True
+instructionBoardTyler_Blueprint_C.Materials=True
+instructionBoardTyler_Blueprint_C.Physics=True
+instructionBoardTyler_Blueprint_C.Collision=True
+instructionBoardTyler_Blueprint_C.Lighting=True
+instructionBoardTyler_Blueprint_C.Tags=True
+instructionBoardTyler_Blueprint_C.ComponentReplication=True
+instructionBoardTyler_Blueprint_C.Cooking=True
+instructionBoardTyler_Blueprint_C.Events=True
+REINST_instructionBoardTyler_Blueprint_C_88.TransformCommon=True
+REINST_instructionBoardTyler_Blueprint_C_88.StaticMesh=True
+REINST_instructionBoardTyler_Blueprint_C_88.Materials=True
+REINST_instructionBoardTyler_Blueprint_C_88.Physics=True
+REINST_instructionBoardTyler_Blueprint_C_88.Collision=True
+REINST_instructionBoardTyler_Blueprint_C_88.Lighting=True
+REINST_instructionBoardTyler_Blueprint_C_88.Rendering=True
+REINST_instructionBoardTyler_Blueprint_C_88.Tags=True
+REINST_instructionBoardTyler_Blueprint_C_88.Cooking=True
+REINST_instructionBoardTyler_Blueprint_C_88.Input=True
+REINST_instructionBoardTyler_Blueprint_C_88.Actor=True
+REINST_instructionBoardTyler_Blueprint_C_92.TransformCommon=True
+REINST_instructionBoardTyler_Blueprint_C_92.StaticMesh=True
+REINST_instructionBoardTyler_Blueprint_C_92.Materials=True
+REINST_instructionBoardTyler_Blueprint_C_92.Physics=True
+REINST_instructionBoardTyler_Blueprint_C_92.Collision=True
+REINST_instructionBoardTyler_Blueprint_C_92.Lighting=True
+REINST_instructionBoardTyler_Blueprint_C_92.Rendering=True
+REINST_instructionBoardTyler_Blueprint_C_92.Tags=True
+REINST_instructionBoardTyler_Blueprint_C_92.Cooking=True
+REINST_instructionBoardTyler_Blueprint_C_92.Input=True
+REINST_instructionBoardTyler_Blueprint_C_92.Actor=True
+REINST_instructionBoardTyler_Blueprint_C_96.TransformCommon=True
+REINST_instructionBoardTyler_Blueprint_C_96.StaticMesh=True
+REINST_instructionBoardTyler_Blueprint_C_96.Materials=True
+REINST_instructionBoardTyler_Blueprint_C_96.Physics=True
+REINST_instructionBoardTyler_Blueprint_C_96.Collision=True
+REINST_instructionBoardTyler_Blueprint_C_96.Lighting=True
+REINST_instructionBoardTyler_Blueprint_C_96.Rendering=True
+REINST_instructionBoardTyler_Blueprint_C_96.Tags=True
+REINST_instructionBoardTyler_Blueprint_C_96.Cooking=True
+REINST_instructionBoardTyler_Blueprint_C_96.Input=True
+REINST_instructionBoardTyler_Blueprint_C_96.Actor=True
+REINST_instructionBoardTyler_Blueprint_C_104.TransformCommon=True
+REINST_instructionBoardTyler_Blueprint_C_104.StaticMesh=True
+REINST_instructionBoardTyler_Blueprint_C_104.Materials=True
+REINST_instructionBoardTyler_Blueprint_C_104.Physics=True
+REINST_instructionBoardTyler_Blueprint_C_104.Collision=True
+REINST_instructionBoardTyler_Blueprint_C_104.Lighting=True
+REINST_instructionBoardTyler_Blueprint_C_104.Rendering=True
+REINST_instructionBoardTyler_Blueprint_C_104.Tags=True
+REINST_instructionBoardTyler_Blueprint_C_104.Cooking=True
+REINST_instructionBoardTyler_Blueprint_C_104.Input=True
+REINST_instructionBoardTyler_Blueprint_C_104.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1196,7 +1271,7 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
 BP_PickupCube_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
-BP_PickupBeanbag_C="\"Object.StartingTransform\" \"Object.StartingTransform\" "
+BP_PickupBeanbag_C=
 CornHoleboard_C=
 TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
 Tyler_cornholeBoard2_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
@@ -1205,13 +1280,14 @@ ScoreManager_C="\"Object.BlueScore\" \"Object.BlueScore\" "
 resetLevelButton_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/TylerMaterials/instructionBoardTyler.instructionBoardTyler;
+RecentlyPlaced=/Game/TylerMaterials/scoreboard_tyler.scoreboard_tyler;
 RecentlyPlaced=/Game/Tyler_Blueprints/office_table1.office_table1;
 RecentlyPlaced=/Game/Tyler_Blueprints/cup.cup;
 RecentlyPlaced=/Game/Tyler_Blueprints/office_coffeetable.office_coffeetable;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Tyler_Blueprints/WoodenCrate_Will.WoodenCrate_Will;
 RecentlyPlaced=/Game/TylerMaterials/buttonTyler.buttonTyler;
-RecentlyPlaced=/Game/TylerMaterials/scoreboard_tyler.scoreboard_tyler;
 RecentlyPlaced=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Tyler_Blueprints/ScoreManager.ScoreManager;
 RecentlyPlaced=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger;
@@ -1224,7 +1300,6 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New.Tyler_Tree3New;
 RecentlyPlaced=/Game/TylerMaterials/NewBush_Tyler.NewBush_Tyler;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_BeanbagblendBlue.Tyler_BeanbagblendBlue;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Beanbagblend.Tyler_Beanbagblend;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_FabricBeanbag.Tyler_FabricBeanbag;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=0
@@ -1284,7 +1359,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Office/Table1/office_table1.obj
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Outdoors/Cornhole/instructionBoardTyler.obj
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
